--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 		<h2>Speakers</h2>
 		<div class="speaker-grid">
 			<div class="speaker">
-				<img src="speaker1.png" alt="Speaker 1">
+				<img src="speaker1.png" alt="Anna Cherepantseva, Product Designer">
 				<h3>Anna Cherepantseva</h3>
 				<p>Product Designer</p>
 			
 
 			</div>
 			<div class="speaker">
-				<img src="speaker2.png" alt="Speaker 2">
+				<img src="speaker2.png" alt="Sviatoslav Nytka, Design Lead">
 				<h3>Sviatoslav Nytka</h3>
 				<p>Design Lead</p>
 				
 			</div>
 			<div class="speaker">
-				<img src="speaker3.png" alt="Speaker 3">
+				<img src="speaker3.png" alt="Nils Jorgensen, UX Researcher">
 				<h3>Nils Jorgensen</h3>
 				<p>UX Researcher</p>
 			
@@ -79,7 +79,7 @@
 				The lecture will explore various aspects of accessibility, including color contrast, 
 				keyboard navigation, screen readers, and other.
 			</p>
-			<img class="img-absolute" src="speaker1.png" width="100px">
+			<img class="img-absolute" src="speaker1.png" alt="Anna Cherepantseva, Product Designer" width="100px">
 		</div>
 		<div class="cards-description">
 			<h3>
@@ -91,7 +91,7 @@
 				and ensuring consistency across your designs. Learn how to leverage Figma's 
 				collaboration features to enhance teamwork and streamline the design process.
 			</p>
-			<img class="img-absolute" src="speaker2.png" width="100px">
+			<img class="img-absolute" src="speaker2.png" alt="Sviatoslav Nytka, Design Lead" width="100px">
 		</div>
 		<div class="cards-description">
 			<h3>
@@ -103,7 +103,7 @@
 				 design. Learn about different testing methods, tools and techniques, 
 				 and how to analyze test results to make informed design decisions.
 			</p>
-			<img class="img-absolute" src="speaker3.png" width="100px">
+			<img class="img-absolute" src="speaker3.png" alt="Nils Jorgensen, UX Researcher" width="100px">
 		</div>
 	</div>
 	  </section>
