--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 	<section class="speakers">
 		<h2>Speakers</h2>
 		<div class="speaker-grid">
+
+			<div class="speaker">
+				<img src="speaker2.png" alt="Sviatoslav Nytka, Design Lead">
+				<h3>Sviatoslav Nytka</h3>
+				<p>Design Lead</p>
+			
+			</div>
+
 			<div class="speaker">
 				<img src="speaker1.png" alt="Anna Cherepantseva, Product Designer">
 				<h3>Anna Cherepantseva</h3>
@@ -51,12 +59,7 @@
 			
 
 			</div>
-			<div class="speaker">
-				<img src="speaker2.png" alt="Sviatoslav Nytka, Design Lead">
-				<h3>Sviatoslav Nytka</h3>
-				<p>Design Lead</p>
 			
-			</div>
 		</div>
 	</section>
 
@@ -64,30 +67,31 @@
 	<section class="theme">
 		<h2>Agenda</h2>
 		<div class="theme-grid">
-		<div class="cards-description">
-			<h3>
-				Accessibility in design
-			</h3>
-			<p>
-				Learn what are key principles and best practices for creating digital products 
-				that are usable by everyone, regardless of their physical or cognitive abilities. 
-				The lecture will explore various aspects of accessibility, including color contrast, 
-				keyboard navigation, screen readers, and other.
-			</p>
-			<img class="img-absolute" src="speaker1.png" alt="Anna Cherepantseva, Product Designer" width="100px">
-		</div>
-		<div class="cards-description">
-			<h3>
-				Design systems in Figma
-			</h3>
-			<p>
-				Explore how to create and maintain a design system in Figma. 
-				Discover best practices for organizing components, creating documentation, 
-				and ensuring consistency across your designs. Learn how to leverage Figma's 
-				collaboration features to enhance teamwork and streamline the design process.
-			</p>
-			<img class="img-absolute" src="speaker2.png" alt="Sviatoslav Nytka, Design Lead" width="100px">
-		</div>
+			<div class="cards-description">
+				<h3>
+					Design systems in Figma
+				</h3>
+				<p>
+					Explore how to create and maintain a design system in Figma. 
+					Discover best practices for organizing components, creating documentation, 
+					and ensuring consistency across your designs. Learn how to leverage Figma's 
+					collaboration features to enhance teamwork and streamline the design process.
+				</p>
+				<img class="img-absolute" src="speaker2.png" alt="Sviatoslav Nytka, Design Lead" width="100px">
+			</div>
+			<div class="cards-description">
+				<h3>
+					Accessibility in design
+				</h3>
+				<p>
+					Learn what are key principles and best practices for creating digital products 
+					that are usable by everyone, regardless of their physical or cognitive abilities. 
+					The lecture will explore various aspects of accessibility, including color contrast, 
+					keyboard navigation, screen readers, and other.
+				</p>
+				<img class="img-absolute" src="speaker1.png" alt="Anna Cherepantseva, Product Designer" width="100px">
+			</div>
+		
 	</div>
 	  </section>
 
@@ -113,12 +117,14 @@
 	  </section>
 
 	<section class="see-you-later">
+	<div>
 		<h1>
 			See you soon!
 		</h1>
-		<div>
+		<div class="see-you-later-image">
 			<img class="illustration-container-img" src="house.svg">
 		</div>
+	</div>
 	</section>
 	  
 
